postgres db using as default
